// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shadow component tests Brand shadow (depth=2) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 2,
      }
    }
  >
    Brand shadow (depth=2)
  </Text>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=4) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 4,
      }
    }
  >
    Brand shadow (depth=4)
  </Text>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=8) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 8,
      }
    }
  >
    Brand shadow (depth=8)
  </Text>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=16) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 16,
      }
    }
  >
    Brand shadow (depth=16)
  </Text>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=28) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 8,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 14,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 28,
      }
    }
  >
    Brand shadow (depth=28)
  </Text>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=64) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 8,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 32,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 64,
      }
    }
  >
    Brand shadow (depth=64)
  </Text>
</View>
`;

exports[`Shadow component tests Shadow (depth=2) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 2,
      }
    }
  >
    Shadow (depth=2)
  </Text>
</View>
`;

exports[`Shadow component tests Shadow (depth=4) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 4,
      }
    }
  >
    Shadow (depth=4)
  </Text>
</View>
`;

exports[`Shadow component tests Shadow (depth=8) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 8,
      }
    }
  >
    Shadow (depth=8)
  </Text>
</View>
`;

exports[`Shadow component tests Shadow (depth=16) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 16,
      }
    }
  >
    Shadow (depth=16)
  </Text>
</View>
`;

exports[`Shadow component tests Shadow (depth=28) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 8,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 14,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 28,
      }
    }
  >
    Shadow (depth=28)
  </Text>
</View>
`;

exports[`Shadow component tests Shadow (depth=64) 1`] = `
<View
  style={
    Object {
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 8,
    }
  }
>
  <Text
    style={
      Object {
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 32,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 64,
      }
    }
  >
    Shadow (depth=64)
  </Text>
</View>
`;
